--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
       <!-- Sort Todos -->
-        <fieldset>
+        <fieldset class="todo-filter">
           <input type="radio" id="all" name="view-todo" value="all" class="radiobutton" checked>
           <label for="all"> All</label> 
           <input type="radio" id="open" name="view-todo" value="open" class="radiobutton">
@@ -21,8 +21,6 @@
           <input type="radio" id="done" name="view-todo" value="done" class="radiobutton">
           <label for="done"> Done</label> 
         </fieldset>
-
-
 
           <form action="" class="todo-form">
           <!-- Input Field -->
