--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
       <!-- Sort Todos -->
         <fieldset class="todo-filter">
-          <input type="radio" id="all" name="view-todo" value="all" class="radiobutton" checked>
+          <input type="radio" id="all" name="view-todo" value="all" class="radiobutton">
           <label for="all"> All</label> 
           <input type="radio" id="open" name="view-todo" value="open" class="radiobutton">
           <label for="open"> Open</label>
